[gd_scene load_steps=2 format=3 uid="uid://bv52oaewrgjus"]

[ext_resource type="Script" uid="uid://7ofy5s76l0df" path="res://ui/pause_menu.gd" id="1_c7v6e"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_c7v6e")

[node name="Panel" type="Panel" parent="."]
offset_left = 581.0
offset_top = 175.0
offset_right = 812.0
offset_bottom = 412.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 69.0
offset_top = 26.0
offset_right = 155.0
offset_bottom = 154.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "   PAUSA
"

[node name="BtnResume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="BtnRestart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Reiniciar"

[node name="BtnQuit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Salir
"
